# RemoveWatermark

./: .gitignore  AGENTS.md  COLAB.md  README.md  RemoveWatermark_Colab.ipynb  pyproject.toml  setup-venv.bat  start-ui.bat
remove_watermark/: __init__.py
scripts/: setup-venv.ps1
src/remove_watermark/: __init__.py  ai_detection.py  cli.py  core.py  debug_render.py  detection.py  detection_candidates.py  detection_profiles.py  detection_scoring.py  lama.py  mask_builder.py  masking.py  models.py  restoration.py  templates.py  web.py  web_images.py  web_jobs.py  web_models.py  web_processing.py  web_settings.py  web_workspace.py
src/remove_watermark/web_static/: api.js  app.js  canvas.js  index.html  operations.js  render.js  settings.js  state.js  styles.css
